codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__session_picker_settings_tests__resume_picker_preserves_plan_mode_with_legacy_server.snap
---
source: tui/src/app/tests/session_picker_settings_tests.rs
assertion_line: 181
expression: "crate::chatwidget::tests::helpers::normalize_snapshot_paths(render_bottom_popup(&app.chat_widget,\n80,))"
---
› retained resume-picker draft

  GPT-5.6-Sol default · /tmp/project            Plan mode (shift+tab to cycle)
