codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__session_picker_settings_tests__resume_picker_preserves_server_settings_and_draft.snap
---
source: tui/src/app/tests/session_picker_settings_tests.rs
assertion_line: 140
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
› retained resume-picker draft

  gpt-5.4 high · /tmp/project                   Plan mode (shift+tab to cycle)
